[package]
name = "hundred_days_of_rust"
version = "0.1.0"
edition = "2021"
default-run = "hundred_days_of_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"

[[bin]]
name = "two_sum"
path = "src/two_sum.rs"

[[bin]]
name = "observer_pattern"
path = "src/observer_pattern2.rs"
[[bin]]
name = "palindrome"
path = "src/palindrome.rs"
[[bin]]
name = "roman"
path = "src/roman_integer.rs"
[[bin]]
name = "decorator"
path = "src/decorator.rs"
[[bin]]
name = "common_prefix"
path = "src/longest_prefix.rs"
[[bin]]
name = "validp"
path = "src/valid_parentheses.rs"
[[bin]]
name = "removed"
path = "src/remove_duplicate.rs"

[[bin]]
name = "observer"
path = "observer_pattern/entry.rs"

[[bin]]
name = "decorator_pattern"
path = "decorator_pattern/deco.rs"

[[bin]]
name = "factory_pattern"
path = "factory_pattern/factory_method.rs"

[[bin]]
name = "abstract_factory"
path = "factory_pattern/abstract_factory.rs"

[[bin]]
name = "singleton"
path = "singleton_pattern/singleton.rs"

[[bin]]
name = "command"
path = "command_pattern/command.rs"

[[bin]]
name = "adapter"
path = "adapter_pattern/adapter.rs"

[[bin]]
name = "facade"
path = "facade_pattern/facade.rs"
[[bin]]
name = "bridge"
path = "bridge_pattern/bridge.rs"
